[FIX] dont have escaped html for truncate annotations

--- a/app/assets/stylesheets/2_styles.css.scss
+++ b/app/assets/stylesheets/2_styles.css.scss
@@ -51,6 +51,7 @@ body#start main {
 
 #layers #table-wrapper {
     max-width: unset;
+    max-width: min-content;
 }
 #layers .grid-x.grid-images {
 
